Fixed issue with depricated URL method